font updates, media queries, alerts, cookiePage etc.

--- a/functions/views/aboutUs.hbs
+++ b/functions/views/aboutUs.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid aboutUsLP m-0 p-0">
+<div class="container-fluid aboutUsLP m-0 mt-4 p-0">
     <img class="aboutUsHeader" data-aos= "fade-in" data-duration="300" src="/images/aboutUsHeader.png" alt="header"/>
 </div>
 <div class=" container proJS_Description pt-5 mt-5">
