--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -1,20 +1,19 @@
 <!--- landing page --->
-<div class="container-fluid bg ">
+<div class="container-fluid bg " id="indexBG">
 <div class="row landingPage">
     <div class = "col landingTextSec"> 
         <p class="landingText">Cloud.js</p> 
         <p class="landingSubText">Get Organised<br> With us</p> 
         <div class ="d-flex justify-content-center">
-        <button type="button" onclick="location.href='/users/register';" id="signingInBtn" class=" btn btn-outline-light btn-lg mt-5 ">Sign Up</button> 
+        <button type="button" onclick="location.href='/users/register';" id="signingInBtn1" class=" btn btn-outline-light btn-lg mt-5">Sign Up</button> 
         </div>
     </div>
     <div class="col align-items-end animated bounce desktopImg"><img class="landingIMG" src="/images/mainPC.png"></div>
 </div>
-    
 </div>
 
 <!-- after landing page -->
-<div class="container  mt-5 pt-3" id="pt2">
+<div class="container  mt-5 pt-3 " id="pt2">
     <div class="row">
         <div class="col-sm-12">
             <p class="header">We're An Online Cloud Manager</p>
@@ -102,7 +101,7 @@
     <p class="topBtn"> Get Started Today</p>
 </div>
 <div class="row justify-content-center">
-    <button type="button" onclick="location.href='/users/register';"id="signingInBtn" class="signBtn">Sign Up</button>
+    <button type="button" onclick="location.href='/users/register';" id="signingInBtn2" class="signBtn ">Sign Up</button>
 
 </div>
 <div class="row justify-content-center">
@@ -136,7 +135,7 @@
     <p class="topBtn">Convinced Yet?</p>
 </div>
 <div class="row justify-content-center">
-    <button type="button" onclick="location.href='/users/register';" id="signingInBtn" class="signBtn">Sign Up</button>
+    <button type="button" onclick="location.href='/users/register';" id="signingInBtn3" class="signBtn">Sign Up</button>
 
 </div>
 <div class="row justify-content-center">
@@ -165,3 +164,8 @@
         </div>
     </div>
 </div>
+
+<!-- - - - - - - - - - SCRIPTS - - - - - - - - - - - - -->
+<!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/javascripts/indexPage.js"></script>
