--- a/functions/views/policy.hbs
+++ b/functions/views/policy.hbs
@@ -1,5 +1,5 @@
-<br><br><br><br><br>
-<div class="jumbotron pl-5">
+
+<div class="jumbotron pl-5 mt-5">
     <header class="bold">Privacy Policy</header>
 
     <p>Effective date: January 30, 2019</p>
