Policy & interface minor fixes

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -46,7 +46,7 @@
                 <button type="button" class="toolBarBtn upload ml-2" data-toggle="modal" data-target="#myModal">Upload</button>
                 <button type="button" class="toolBarBtn connectAccount" data-toggle="modal" data-target="#loginModal">Connect Account</button>
                 <button type="button" class="toolBarBtn" data-toggle="modal" data-target="#transferModal">Service for Transfer</button>              
-                <button type="button" class=" toolBarBtn">Complete Transfer</button>                
+                <button type="button" class=" toolBarBtn" onclick="completeTransfer();">Complete Transfer</button>                
                 <button type="button" class="close justify-content-end pr-3 toolSecCloseBtn" id="toolbarsBtn">&times;</button>
         </nav>
 
