--- a/functions/views/login.hbs
+++ b/functions/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="container formRegister">
-    <form id="log-form" class="mt-5 pt-3">
+    <form id="log-form" class="mt-5 ">
         <div class="form-group headingLabel text-center">
             <header>Sign In</header><br>
         </div>
