--- a/functions/views/policy.hbs
+++ b/functions/views/policy.hbs
@@ -1,12 +1,13 @@
-
-<div class="jumbotron pl-5 mt-5">
+<div class="jumbotron pl-5 mt-5 text-center">
     <header class="bold">Privacy Policy</header>
 
     <p>Effective date: January 30, 2019</p>
 
     <p>Pro.js ("us", "we", or "our") operates the <span class="bold">https://cloudjs-projs.firebaseapp.com</span> website (the "Service").<br> This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. <br> We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from https://cloudjs-projs.firebaseapp.com</p>
 </div>
+
 <div class="container">
+    
     <h1 class="bold">Information Collection And Use</h1>
 
     <p>We collect several different types of information for various purposes to provide and improve our Service to you.</p>
