final updates to the website

--- a/functions/views/aboutUs.hbs
+++ b/functions/views/aboutUs.hbs
@@ -7,7 +7,7 @@
 </div>
 <!-- meet the team section --> 
 
-<div class="container pt-5 mt-5 teamSec"> 
+<div class="container pt-5 mt-5 teamSec mb-5" > 
     <subHeader class="pt-5 mb-5">Meet The Team</subHeader>
 
     <!-- images --> 
@@ -18,7 +18,7 @@
             <p class="githubLink"> <a href="https://github.com/Soph1ia">@Soph1ia</a></p>
         </div>
         <div class="col-sm-4">
-            <img data-aos="fade-left" src="/images/sofia.svg" alt="member-1">
+            <img data-aos="fade-left" src="/images/sofia.png" alt="member-1">
         </div>
     </div>
     <div class= "row">
@@ -26,7 +26,7 @@
             <p class="githubLink" > <a href="https://github.com/MohamedMoustafaNUIG">@MohamedMoustafaNUIG</a></p>
         </div>
         <div class="col-sm-4">
-            <img  data-aos="fade-right" src="/images/mohamed.svg" alt="member-2">
+            <img  data-aos="fade-right" src="/images/mohamed.png" alt="member-2">
         </div>
     </div>
     <div class= "row">
@@ -34,7 +34,7 @@
             <p class="githubLink"><a href="https://github.com/JaraKucera">@JaraKucera</a></p>
         </div>
         <div class="col-sm-4">
-            <img data-aos="fade-left" src="/images/jara.svg" alt = "member-3">
+            <img data-aos="fade-left" src="/images/jara.png" alt = "member-3">
         </div>
     </div>
     <div class= "row pb-5">
@@ -42,7 +42,7 @@
             <p class="githubLink" ><a href="https://github.com/J-Nicholas">@J-Nicholas</a></p>
         </div>
         <div class="col-sm-4">
-            <img  data-aos="fade-right" src="/images/johnathan.svg" alt="member-4">
+            <img  data-aos="fade-right" src="/images/johnathan.png" alt="member-4">
         </div>
     </div>
     </div>
