--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -16,15 +16,15 @@
 <div class="container  mt-5 pt-3 " id="pt2">
     <div class="row">
         <div class="col-sm-12">
-            <p class="header">We're An Online Cloud Manager</p>
+            <p class="header" data-aos ="fade-in">We're An Online Cloud Manager</p>
         </div>
     </div>
-    <div class="row pt-0 mt-0">
+    <div class="row pt-0 mt-0" data-aos ="fade-in">
         <div class="col-sm-12">
             <span class="subtext"> We Work Hard So You Don't Have To</span>
         </div>
     </div>
-    <div class="row pt-5 pb-5 mt-5">
+    <div class="row pt-5 pb-5 mt-5" data-aos ="fade-in">
         <div class="col-sm">
             <p class="introTxt">Our cloud manager will help you
                 get organised,<br>
@@ -34,7 +34,7 @@
                 information is. </p>
         </div>
         <div class="col-sm imgSec">
-            <img src="/images/img1_D.png">
+            <img src="/images/img1_D.png" data-aos ="fade-left">
         </div>
     </div>
 </div>
@@ -65,7 +65,7 @@
 <!--- end of grey section --->
 
 <!-- Statistics section + Button Section -->
-<div class="container statisticsIconSection pt-5 mt-5">
+<div class="container statisticsIconSection pt-5 mt-5" data-aos ="fade-in">
     <div class="row">
         <div class="col-sm-4 piechartIcon">
             <img src="/images/img2_DM.png">
@@ -151,16 +151,16 @@
 <!--- - - - - - Resource Section  - - - - - -  --->
 <!-- section contain cloud services we handle  --->
 <div class="container mt-5 resourceSection mt-5 mb-5 pb-5">
-    <header class="pb-4"> Resources...</header>
+    <header class="pb-4" data-aos ="fade-in"> Resources...</header>
     <div class="row pt-5">
         <div class="col-sm-4 onedriveIcon mb-4">
-            <img src="/images/img5_Dm.png">
+            <img src="/images/img5_Dm.png" data-aos ="fade-in">
         </div>
-        <div class="col-sm-4 googleIcon mt-4 mb-4">
-            <img src="/images/img6_DM.png">
+        <div class="col-sm-4 googleIcon mt-4 mb-4" >
+            <img src="/images/img6_DM.png" data-aos ="fade-in">
         </div>
         <div class="col-sm-4 dropboxIcon mt-4">
-            <img src="/images/img7_Dm.png">
+            <img src="/images/img7_Dm.png" data-aos ="fade-in">
         </div>
     </div>
 </div>
