--- a/functions/views/policy.hbs
+++ b/functions/views/policy.hbs
@@ -1,4 +1,4 @@
-<div class="jumbotron pl-5 mt-5 text-center">
+<div class="jumbotron pl-5 mt-5 text-center mt-5">
     <header class="bold">Privacy Policy</header>
 
     <p>Effective date: January 30, 2019</p>
@@ -97,7 +97,7 @@
     <h2 class="grey bold">Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us:</p>
     <ul>
-        <li>By visiting this page on our website: <span class="bold">http://danu7.it.nuigalway.ie:8631/aboutUs</span></li>
+        <li>By visiting this page on our website: <span class="bold">https://cloudjs-projs.firebaseapp.com</span></li>
 
     </ul>
 </div>
