--- a/functions/views/layouts/layout.handlebars
+++ b/functions/views/layouts/layout.handlebars
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <!-- stylesheet for bootstrap --->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
     <!--- Mdbootstrap.css
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/css/mdb.min.css" rel="stylesheet"> ---------->
@@ -25,12 +27,14 @@
 <body>
     <!----------- NAVBAR ----------------->
 
-     <nav id="navbar" class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top shadow" style="background-color:#2D2D35;">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top shadow"
+        style="background-color:#2D2D35;">
         <a class="navbar-brand" href="/"><img class="logoIMG" src="/images/logo.png" width="50%"></a>
 
-        <button id="NavbarTogglingBtn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+        <button id="NavbarTogglingBtn" class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
@@ -110,7 +114,7 @@
 
 
     <!---------------------- LINKS ---------------------------------->
-    <!-- Script for mobile detect .js --> 
+    <!-- Script for mobile detect .js -->
     <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.3/mobile-detect.min.js"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -122,7 +126,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!--- AOS ---->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <!-- Sweet Alert CDN --> 
+    <!-- Sweet Alert CDN -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!---- Mdbootstrap.js
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/js/mdb.min.js"></script>----->
@@ -133,7 +137,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
     <!-- Firebase Initialization Javascript file -->
     <script src="/javascripts/fbInit.js"></script>
-    
+
     <!-- main Javascript file ---->
     <script src="/javascripts/main.js"></script>
     <!-- Authentication Javascript file -->
