Final design changes to website

--- a/public/stylesheets/profilePage.css
+++ b/public/stylesheets/profilePage.css
@@ -8,15 +8,13 @@ body {
 }
 
 .navbar{
-    /* background-color: transparent !important;
-    box-shadow: none !important; */
     display:none;
 }
 .page-footer {
     display: none;
 }
-.logoIMG {
-    padding-left: 5px;
+.sidebarLogo {
+    cursor: pointer;
 }
 
 
